Added Google API key and dependencies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GeoMap</string>
+    <string name="google_api_key">AIzaSyBmNkfaGMxd-yQTBXQu0GZ69uQfIsHiT5E</string>
 </resources>
